--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'java'
+apply plugin: 'war'
 
 jar {
   baseName = 'demo'
@@ -12,9 +13,20 @@ repositories {
 }
 
 dependencies {
-  compile('org.eclipse.jetty:jetty-servlet:9.4.5.v20170502')
   compile('javax.servlet:javax.servlet-api:3.1.0')
+  compile 'com.github.jsimone:webapp-runner:8.5.11.3'
 }
 
-task stage(dependsOn: ['build', 'clean'])
-build.mustRunAfter clean
+task stage() {
+    dependsOn clean, war
+}
+war.mustRunAfter clean
+
+task copyToLib(type: Copy) {
+    into "$buildDir/server"
+    from(configurations.compile) {
+        include "webapp-runner*"
+    }
+}
+
+stage.dependsOn(copyToLib)
